完成了获取系统信息接口、获取公开的配置项信息接口、获取所有配置项信息接口以及编辑配置项接口
