# pkg/routes/api_routes.go
@@ -8,9 +8,11 @@ import (
 func APIRoutes(app *fiber.App) {
 	route := app.Group("/api/v1")
 
+	// 公开接口
 	route.Get("/system/info", controllers.GetSystemInfo)
-
-	route.Get("/public-options", controllers.GetPublicOptions)
-
-	route.Put("/admin/options", controllers.UpdateOption)
+	route.Get("/public-settings", controllers.GetPublicSettings)
+	route.Post("/admin/login", controllers.AdminLogin)
+	// 需要鉴权的接口
+	route.Get("/settings", controllers.GetSettings)
+	route.Put("/admin/settings/:key", controllers.UpdateSetting)
 }
